<resources>
    <string name="app_name">Little T\'s Elevator Sim</string>
    <string name="label_floor00">6HB</string>
    <string name="label_floor01">*1</string>
    <string name="label_floor02">2</string>
    <string name="label_floor03">3</string>
    <string name="label_floor04">4</string>
    <string name="label_floor05">5</string>
    <string name="label_floor06">6</string>
    <string name="label_floor07">7</string>
    <string name="label_floor08">8</string>
    <string name="label_floor09">9</string>
    <string name="label_door_open">&lt;|&gt;</string>
    <string name="label_door_close">&gt;|&lt;</string>
    <string name="label_alarm">ALARM</string>
    <string name="display_floor00">6HB</string>
    <string name="display_floor01">1</string>
    <string name="display_floor02">2</string>
    <string name="display_floor03">3</string>
    <string name="display_floor04">4</string>
    <string name="display_floor05">5</string>
    <string name="display_floor06">6</string>
    <string name="display_floor07">7</string>
    <string name="display_floor08">8</string>
    <string name="display_floor09">9</string>
    <string name="display_door_open1">Door Opening.</string>
    <string name="display_door_open2">Door Opening..</string>
    <string name="display_door_open3">Door Opening...</string>
    <string name="display_door_open4">Door Opening....</string>
    <string name="display_door_open5">Door Opening.....</string>
    <string name="display_door_open6">Door Open</string>
    <string name="display_door_close1">Door Closing.</string>
    <string name="display_door_close2">Door Closing..</string>
    <string name="display_door_close3">Door Closing..</string>
    <string name="display_door_close4">Door Closed</string>
    <string name="display_alarm">ALARM</string>
    <string name="description_arrow_up">Up Arrow</string>
    <string name="description_arrow_down">Down Arrow</string>
</resources>
