<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daysailsoftware.simelevator.MainActivity"
    android:background="@android:color/background_dark"
    android:gravity="center"
    android:stretchMode="spacingWidthUniform"
    android:columnCount="4"
    android:rowCount="14" >

    <TextView
        android:id="@+id/txtDisplayFloor"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:fontFamily="sans-serif"
        android:padding="20dp"
        android:drawablePadding="5dp"
        android:layout_margin="0dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/txtDisplayMessage"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowSpan="2"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:background="@android:drawable/alert_dark_frame"
        android:padding="30sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp" />

    <Button
        android:id="@+id/btnFloorBasement"
        android:layout_row="10"
        android:layout_column="1"
        android:onClick="sendMessageFloorBasement"
        android:layout_margin="10dp"
        android:textSize="14sp"
        tools:layout_gravity="center_vertical"
        android:layout_gravity="center_vertical" />

    <TextView
        android:id="@+id/lblFloor00"
        android:text="@string/label_floor00"
        android:layout_height="wrap_content"
        android:layout_row="10"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:padding="10dp"
        android:background="@android:drawable/alert_dark_frame"
        android:textColor="@android:color/darker_gray"
        android:gravity="center"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <Button
        android:id="@+id/btnFloor01"
        android:layout_row="9"
        android:layout_column="1"
        android:onClick="sendMessageFloor01"
        android:layout_margin="10dp"
        android:textSize="14sp"
        tools:layout_gravity="center_vertical"
        android:layout_gravity="center_vertical" />

    <TextView
        android:id="@+id/lblFloor01"
        android:text="@string/label_floor01"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:padding="10dp"
        android:background="@android:drawable/alert_dark_frame"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <Button
        android:id="@+id/btnFloor02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="1"
        android:onClick="sendMessageFloor02"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <TextView
        android:id="@+id/lblFloor02"
        android:text="@string/label_floor02"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:padding="10dp"
        android:background="@android:drawable/alert_dark_frame"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <Button
        android:id="@+id/btnFloor03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="1"
        android:onClick="sendMessageFloor03"
        android:layout_margin="10dp"
        android:layout_gravity="center_vertical" />

    <TextView
        android:id="@+id/lblFloor03"
        android:text="@string/label_floor03"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:padding="10dp"
        android:background="@android:drawable/alert_dark_frame"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <Button
        android:id="@+id/btnFloor04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:onClick="sendMessageFloor04"
        android:layout_margin="10dp"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <TextView
        android:id="@+id/lblFloor04"
        android:text="@string/label_floor04"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:padding="10dp"
        android:background="@android:drawable/alert_dark_frame"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <Button
        android:id="@+id/btnFloor05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:onClick="sendMessageFloor05"
        android:layout_margin="10dp"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <TextView
        android:id="@+id/lblFloor05"
        android:text="@string/label_floor05"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:padding="10dp"
        android:background="@android:drawable/alert_dark_frame"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <Button
        android:id="@+id/btnDoorOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="1"
        android:onClick="sendMessageDoorOpen"
        android:layout_margin="10dp"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <TextView
        android:id="@+id/lblDoorOpen"
        android:text="@string/label_door_open"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:padding="10dp"
        android:background="@android:drawable/alert_dark_frame"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <Button
        android:id="@+id/btnDoorClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="12"
        android:layout_column="1"
        android:onClick="sendMessageDoorClose"
        android:layout_margin="10dp"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <TextView
        android:id="@+id/lblDoorClose"
        android:text="@string/label_door_close"
        android:layout_height="wrap_content"
        android:layout_row="12"
        android:layout_column="0"
        android:lineSpacingExtra="8sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:padding="10dp"
        android:background="@android:drawable/alert_dark_frame"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <Button
        android:id="@+id/btnDoorAlarm"
        android:text="@string/label_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="2"
        android:onClick="sendMessageAlarm"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_gravity="fill_horizontal|center_vertical" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowSpan="3"
        android:layout_column="0"
        android:layout_columnSpan="1"
        app:srcCompat="@drawable/arrow_up"
        android:contentDescription="@string/description_arrow_up"
        android:id="@+id/imgDisplayUp"
        android:layout_gravity="center"
        android:scaleType="fitCenter" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowSpan="3"
        android:layout_column="0"
        android:layout_columnSpan="1"
        app:srcCompat="@drawable/arrow_down"
        android:contentDescription="@string/description_arrow_down"
        android:id="@+id/imgDisplayDown"
        android:layout_gravity="center"
        android:scaleType="fitCenter" />

    <ImageSwitcher>
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowSpan="3"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:contentDescription="@string/description_arrow_direction"
        android:id="@+id/imgDisplayDirectionArrow"
        android:layout_gravity="center"
        android:scaleType="fitCenter" />
    </ImageSwitcher>
</GridLayout>
